Updated to now use Twitter Bootstrap SCSS, markdown toolbar added, still a lot of things to format correctly after bootstrap change.

--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,7 +1,4 @@
 <% if not logged_in? %>
-  <div id="header">
-    <div class="logo float_left"><%= image_tag("logo.png",:height => '64') %></div>
-      <div class="slogan text_shadow"><%= Setting::business_slogan %></div>
-  </div>
+    <div class="page-header"><%= image_tag("logo.png",:height => '64') %><small><%= Setting::business_slogan %></small></div>
  <hr>
 <% end %>
