--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,8 +9,5 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require jquery.ui.datepicker
- *= require jquery.ui.autocomplete
- *= require jquery.ui.dialog
- *= require myitcrm
+ *= require_tree .
 */
