--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="<%= Setting::meta_tags %>"/>
-  <%= stylesheet_link_tag 'print', :media => "print"  %>
-  <%= stylesheet_link_tag 'application', :media => "screen"  %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tag %>
 </head>
 <body>
 <%= render 'layouts/header' %>
-<% if logged_in?  %>
-<div id="menu">
- <%= render_navigation(:expand_all => true) %>
-     <div id="user_info_menu">
-        <%= t "global.welcome_back" %>&nbsp;<a href="<%= my_account_path(:id=> current_user)%>"><%= current_user.name %></a>
-    </div>
-</div>
+<div class="container-fluid">
+  <% if logged_in?  %>
+<%= render 'layouts/navbar' %>
 <% end %>
-<div style="clear:both;float:none;"></div>
-<div id="container">
-  <div id="yield">
-    <%- flash.each do |name, msg| -%>
-        <p>
-          <%= content_tag :div, msg, :id => "flash_#{name}" %>
-        </p>
-    <%- end -%>
-    <div id="page_title" class="text_shadow">
-      <% if logged_in?  %><h1><%= @title || "" %></h1><% end %>
+  <% flash.each do |name, msg| %>
+        <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+          <a class="close" data-dismiss="alert">×</a>
+          <%= msg %>
+        </div>
+      <% end %>
+      <% if logged_in?  %><h3><%= @title || "" %></h3><% end %>
+    <div class="row-fluid">
+      <div class="span12"> <%= yield %></div>
+      <div id="footer" class="span12">
+        <p style="margin: 0 auto;">
+                  Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - <%= Date.today.year %> - <%= Setting::version %> - Glen Vanderhel
+                </p>
+      </div>
     </div>
-    <%= yield %>
   </div>
-</div>
-<div id="footer">
-  <p>
-    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - <%= Date.today.year %> - <%= Setting::version %> - Glen Vanderhel
-  </p>
-</div>
 </body>
 </html>
