--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -1,33 +1,33 @@
-<table width="100%" cellspacing="0" >
-  <tr> <!--mytodo: add translation-->
-    <th><%= t "workorder.index.t_wo" %></th>
-    <th><%= t "workorder.priority" %></th>
-    <th><%= t "global.client" %></th>
-    <th><%= t "global.subject" %></th>
-    <th><%= t "global.created_at" %></th>
-    <th><%= t "global.updated_at" %></th>
-    <th><%= t "workorder.assigned_to" %></th>
-    <th><%= t "global.actions" %></th>
-  </tr>
-
-
-<% @assigned_work_orders.each do |assigned_wo| %>
-  <tr align="left" class="priority_main_<%= assigned_wo.priority_list.id %>">
-    <td align="center"><%= link_to(assigned_wo.id, assigned_wo) %></td>
-    <td align="center"><%=h assigned_wo.priority_list.name %></td>
-    <td align="center"><%= link_to(assigned_wo.user.name, user_path(assigned_wo.user_id)) %></td>
-    <td><%= truncate(assigned_wo.subject, :length => 75) %></td>
-    <td><%= l assigned_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.created_by %></td>
-    <td><%= l assigned_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.edited_by %></td>
-    <td><%= assigned_wo.assigned_to_username %></td>
-    <td width="w140" align="center"><%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(assigned_wo.id) )%>&nbsp;
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(assigned_wo.id)) %>&nbsp;
-      <% if can? :manage, WorkOrder %>
-       <%= link_to(image_tag('printer.png', :title => (t "global.print")), work_order_path(assigned_wo.id,:format => 'pdf'))%>&nbsp;
-       <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_path(assigned_wo.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>&nbsp;
-       <%= link_to(image_tag('tick.png', :title => (t "global.close")), close_path(assigned_wo.id))%>
-      <% end %>
-    </td>
-  </tr>
-<% end %>
+<table class="table table-bordered table-hover table table-condensed">
+  <thead>
+      <tr>
+        <th style="text-align: left!important;"><%= t "workorder.index.t_wo" %></th>
+            <th><%= t "workorder.priority" %></th>
+            <th><%= t "global.client" %></th>
+            <th><%= t "global.subject" %></th>
+            <th><%= t "workorder.assigned_to" %></th>
+            <th><%= t "global.actions" %></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @assigned_work_orders.each do |assigned_wo| %>
+      <tr class="priority_main_<%= assigned_wo.priority_list.id %>">
+        <td style="text-align: left!important;" ><a href="<%= work_order_path(assigned_wo.id) %>" rel="tooltip" data-placement="right" data-original-title="
+                <%= t "global.created_at" %>:<%= l assigned_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.created_by %>
+                <%= t "global.updated_at" %>:<%= l assigned_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.edited_by %>"><%= assigned_wo.id %></a></td>
+            <td><%=h assigned_wo.priority_list.name %></td>
+            <td><%= link_to(assigned_wo.user.name, user_path(assigned_wo.user_id)) %></td>
+            <td><%= truncate(assigned_wo.subject, :length => 100) %></td>
+            <td><%= assigned_wo.assigned_to_username %></td>
+            <td align="right">
+              <% if can? :manage, WorkOrder %>
+              <a class="btn btn-small" href="<%= work_order_url(assigned_wo.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
+              <a class="btn btn-small" href="<%= edit_work_order_url(assigned_wo.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
+              <a class="btn btn-small" href="<%= work_order_path(assigned_wo.id,:format => 'pdf') %>"><i class="icon-print"></i><%= t("global.print") %></a>
+              <% end %>
+            </td>
+      </tr>
+    <% end %>
+    </tbody>
 </table>
+
