--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -1,32 +1,30 @@
-<table width="100%" cellspacing="0">
-  <tr>
-    <th><%= t "workorder.index.t_wo" %></th>
-    <th><%= t "workorder.priority" %></th>
-    <th><%= t "global.client" %></th>
-    <th><%= t "global.subject" %></th>
-    <th><%= t "global.created_at" %></th>
-    <th><%= t "global.updated_at" %></th>
-    <th><%= t "global.actions" %></th>
-  </tr>
-<% @new_work_orders.each do |new_wo| %>
-    <tr align="left" valign="top" class="priority_main_<%= new_wo.priority_list.id %>">
-    <td align="center"><%= link_to(new_wo.id, new_wo) %></td>
-    <td align="center"><%= new_wo.priority_list.name %></td>
-    <td align="center"><%= link_to(new_wo.user.name, user_path(new_wo.user.id) )%></td>
-    <td><%= truncate(new_wo.subject, :length => 75) %></td>
-    <td><%= l new_wo.created_at, :format => :medium %> by <%=h new_wo.created_by %></td>
-    <td><%= l new_wo.updated_at, :format => :medium %> by <%=h new_wo.edited_by %></td>
-
-    <td class="w140" align="center">
-        <%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(new_wo.id) ) if can? :read, WorkOrder %>&nbsp;
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(new_wo.id)) if can? :edit, WorkOrder %>&nbsp;
-      <% if can? :manage, WorkOrder %>
-       <%= link_to(image_tag('printer.png', :title => (t "global.print")), work_order_path(new_wo.id,:format => 'pdf'))%>&nbsp;
-       <%= link_to(image_tag('delete.png', :title => ( "global.delete")), work_order_path(new_wo.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>&nbsp;
-       <%= link_to(image_tag('tick.png', :title => (t "global.close")), close_path(new_wo.id))%>&nbsp;
-
-      <% end %>
-    </td>
-  </tr>
-<% end %>
+<table class="table table-bordered table-hover table table-condensed">
+  <thead>
+      <tr>
+        <th style="text-align: left!important;"><%= t "workorder.index.t_wo" %></th>
+            <th><%= t "workorder.priority" %></th>
+            <th><%= t "global.client" %></th>
+            <th><%= t "global.subject" %></th>
+            <th><%= t "global.actions" %></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @new_work_orders.each do |new_wo| %>
+      <tr>
+        <td style="text-align: left!important;"><a href="<%= work_order_path(new_wo.id) %>" rel="tooltip" data-placement="right" data-original-title="
+                <%= t "global.created_at" %>:<%= l new_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= new_wo.created_by %>
+                <%= t "global.updated_at" %>:<%= l new_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= new_wo.edited_by %>"><%= new_wo.id %></a></td>
+            <td align="center"><%= new_wo.priority_list.name %></td>
+            <td align="center"><%= link_to(new_wo.user.name, user_path(new_wo.user.id) )%></td>
+            <td><%= truncate(new_wo.subject, :length => 100 ) %></td>
+            <td align="right">
+              <% if can? :manage, WorkOrder %>
+              <a class="btn btn-small" href="<%= work_order_url(new_wo.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
+              <a class="btn btn-small" href="<%= edit_work_order_url(new_wo.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
+              <a class="btn btn-small" href="<%= work_order_path(new_wo.id,:format => 'pdf') %>"><i class="icon-print"></i><%= t("global.print") %></a>
+              <% end %>
+            </td>
+      </tr>
+    <% end %>
+    </tbody>
 </table>
