--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,40 +1,46 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-    <% if current_user.client %>
-        <li class="create"><%= link_to (t "workorder.t_add_new"), new_user_work_order_path(:user_id => current_user.id) %></li>
-     <% else %>
-        <li class="create"><%= link_to (t "workorder.t_add_new"), clients_path %></li>
-    <% end %>
-    <li class="back"><%= link_to (t "global.back"), :back %></li>
-  </ul>
-  </div>
-  <%= render 'layouts/left_sidebar_modules' %>
-</div>
-
-<div id="center_col" class="no_right_sidebar">
-  <div id="ddtabs1" class="basictab">
-    <ul>
-      <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span><% else %><%= @new_work_orders.count %><% end %>)</a></li>
-      <li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<% if @assigned_work_orders.count > 0 %><span style="color:red;"><%= @assigned_work_orders.count %></span><% else %><%= @assigned_work_orders.count %><% end %>)</a></li>
-      <li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %>&nbsp;(<% if @on_hold_work_orders.count > 0 %><span style="color:red;"><%= @on_hold_work_orders.count %></span><% else %><%= @on_hold_work_orders.count %><% end %>)</a></li>
-      <li><a href="#pending" rel="tab4"><%= t "workorder.tab_menu_pending" %>&nbsp;(<% if @pending_work_orders.count > 0 %><span style="color:red;"><%= @pending_work_orders.count %></span><% else %><%= @pending_work_orders.count %><% end %>)</a></li>
-      <li><a href="#re_opened" rel="tab5"><%= t "workorder.tab_menu_re_opened" %>&nbsp;(<% if @re_opened_work_orders.count > 0 %><span style="color:red;"><%= @re_opened_work_orders.count %></span><% else %><%= @re_opened_work_orders.count %><% end %>)</a></li>
-      <li><a href="#closed" rel="tab6"><%= t "workorder.tab_menu_closed" %>&nbsp;(<% if @closed_work_orders.count > 0 %><span style="color:lime;"><%= @closed_work_orders.count %></span><% else %><%= @closed_work_orders.count %><% end %>)</a></li>
+<div class="row-fluid">
+<div class="span10">
+  <div class="tabbable"> <!-- Only required for left/right tabs -->
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#new" data-toggle="tab"><%= t "workorder.tab_menu_new" %>&nbsp;<% if @new_work_orders.count > 0 %><span class="badge badge-important"><%= @new_work_orders.count %></span><% end %></a></li>
+      <li><a href="#assigned" data-toggle="tab"><%= t "workorder.tab_menu_assigned" %>&nbsp;<% if @assigned_work_orders.count > 0 %><span class="badge badge-important"><%= @assigned_work_orders.count %></span><% end %></a></li>
+      <li><a href="#on_hold" data-toggle="tab"><%= t "workorder.tab_menu_on_hold" %>&nbsp;<% if @on_hold_work_orders.count > 0 %><span class="badge badge-important"><%= @on_hold_work_orders.count %></span><% end %></a></li>
+      <li><a href="#pending" data-toggle="tab"><%= t "workorder.tab_menu_pending" %>&nbsp;<% if @pending_work_orders.count > 0 %><span class="badge badge-important"><%= @pending_work_orders.count %></span><% end %></a></li>
+      <li><a href="#re_opened" data-toggle="tab"><%= t "workorder.tab_menu_re_opened" %>&nbsp;<% if @re_opened_work_orders.count > 0 %><span class="badge badge-important"><%= @re_opened_work_orders.count %></span><% end %></a></li>
+      <li><a href="#closed" data-toggle="tab"><%= t "workorder.tab_menu_closed" %>&nbsp;<span class="badge badge-success"><%= @closed_work_orders.count %></span></a></li>
     </ul>
-  </div>
-  <div id="index_table">
-    <div class="tabcontainer">
-
-      <div id="tab1" class="tabcontent"><%= render(:partial => 'work_orders/new_wo_tab') %></div>
-      <div id="tab2" class="tabcontent" ><%= render(:partial => 'work_orders/assigned_wo_tab') %></div>
-      <div id="tab3" class="tabcontent"><%= render(:partial => 'work_orders/on_hold_wo_tab') %></div>
-      <div id="tab4" class="tabcontent"><%= render(:partial => 'work_orders/pending_wo_tab') %></div>
-      <div id="tab5" class="tabcontent"><%= render(:partial => 'work_orders/re_opened_wo_tab') %></div>
-      <div id="tab6" class="tabcontent"><%= render(:partial => 'work_orders/closed_wo_tab') %></div>
+    <div class="tab-content">
+      <div class="tab-pane active" id="new">
+        <p><%= render(:partial => 'work_orders/new_wo_tab') %></p>
+      </div>
+      <div class="tab-pane" id="assigned">
+        <p><%= render(:partial => 'work_orders/assigned_wo_tab') %></p>
+      </div>
+      <div class="tab-pane" id="on_hold">
+              <p><%= render(:partial => 'work_orders/on_hold_wo_tab') %></p>
+            </div>
+      <div class="tab-pane" id="pending">
+              <p><%= render(:partial => 'work_orders/pending_wo_tab') %></p>
+            </div>
+      <div class="tab-pane" id="re_opened">
+              <p><%= render(:partial => 'work_orders/re_opened_wo_tab') %></p>
+            </div>
+      <div class="tab-pane" id="closed">
+                    <p><%= render(:partial => 'work_orders/closed_wo_tab') %></p>
+                  </div>
     </div>
   </div>
-  <div class="clear"></div>
+  </div>
 
+<div class="span2 well">
+  <ul class="nav nav-list">
+    <li class="nav-header">Actions</li>
+    <% if current_user.client %>
+        <li><%= menu_action new_user_work_order_path(:user_id => current_user.id), t("workorder.t_add_new"), "icon-pencil"  %></li>
+        <% else %>
+        <li><%= menu_action clients_path, t("workorder.t_add_new"), "icon-pencil" %></li>
+    <% end %>
+    <li><%= menu_action work_orders_path, (t "global.exit"), "icon-arrow-left" %></li>
+  </ul>
+  </div>
 </div>
