--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -1,54 +1,57 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-        <% if @work_order.closed.blank? and can? :edit, WorkOrder %>
-            <li class="edit"><%= link_to (t "global.edit"), edit_work_order_path %></li>
-        <% end %>
-       <% if can? :destroy, WorkOrder %>
-          <li class="print"><%= link_to (t "global.print"), work_order_path(@work_order.id,:format => 'pdf') %></li>
-            <% if @work_order.closed? %>
-
-              <% if @invoiced %>
-            <li class="print"><%= link_to (t "invoice.show"), invoice_path(@invoiced.id)  %></li>
-              <% else %>
-                   <li class="print"><%= link_to (t "invoice.create"), new_work_order_invoice_path(:work_order_id => @work_order.id) %></li>
-                  <% end %>
-            <% else %>
-            <li class="close"><%= link_to (t "global.close"), close_path(@work_order.id)%> </li>
-            <li class="delete"><%= link_to (t "global.delete"), work_order_path, :confirm => 'Are you sure?', :method => :delete %> </li>
-        <% end %>
-       <% end %>
-
-      <li class="exit"><%= link_to (t "global.exit"), work_orders_path %></li>
-    </ul>
-</div>
-  <%= render 'layouts/left_sidebar_modules' %>
-  </div>
-<div id="center_col" class="content">
-  <div id="show_layout">
-  <label><%= t "workorder.subject" %>:</label><div class="field"> <%= @work_order.subject  %></div>
-  <% if @work_order.closed? %>
-        <label class="simple_form select required"><%= t "workorder.assigned_to" %>:</label><div class="field"><%= @work_order.assigned_to_username %> </div>
-        <% else %>
-
-  <% if current_user.workorder_assignability %>
-     <label class="simple_form select required"><%= t "workorder.assigned_to" %>:</label><%= render :partial => "assign" %>
-  <% else %>
-   <% if @work_order.assigned_to_username.blank? %>
-     <label class="simple_form select required"><%= t "workorder.assigned_to" %>:</label><div class="field"><%= t("workorder.not_assigned_message") %></div>
-   <% else %>
-     <label class="simple_form select required"><%= t "workorder.assigned_to" %>:</label><div class="field"><%= @work_order.assigned_to_username %> </div>
-   <% end %>
-  <% end %>
-  <% end %>
-    <label><%= t "workorder.priority" %>:</label><div class="field "><span class="priority_<%=@work_order.priority_list.id %>"><%= @work_order.priority_list.name %></span></div>
-    <label><%= t "workorder.status" %>:</label><div class="field"><%= @work_order.status.name %></div>
-    <div>
-      <label><%= t "workorder.details" %>:</label>
-      <div class="html_area"><%= markdown(@work_order.description) %></div>
+<div class="span10">
+  <div class="form-horizontal">
+    <div class="control-group">
+      <label class="control-label"><%= t "workorder.subject" %>:</label>
+      <div class="controls">
+        <span class="input-xlarge uneditable-input"><%= @work_order.subject  %></span>
+      </div>
     </div>
+    <% if @work_order.closed? %>
+           <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+        <div class="controls">
+          <span class="input-xlarge uneditable-input"><%= @work_order.assigned_to_username %></span>
+        </div>
+    <% else %>
+
+     <% if current_user.workorder_assignability %>
+        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+        <div class="controls">
+          <%= render :partial => "assign" %>
+        </div>
+     <% else %>
+      <% if @work_order.assigned_to_username.blank? %>
+        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+                <div class="controls"><span class="input-xlarge uneditable-input"><%= t("workorder.not_assigned_message") %></span></div>
+      <% else %>
+        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+                <div class="controls"><span class="input-xlarge uneditable-input"><%= @work_order.assigned_to_username %></span> </div>
+      <% end %>
+     <% end %>
+     <% end %>
+       <label class="control-label"><%= t "workorder.priority" %>:</label>
+            <div class="controls "><span class="label"><%= @work_order.priority_list.name %></span></div>
+       <label class="control-label"><%= t "workorder.status" %>:</label>
+            <div class="controls"><span class="input-xlarge uneditable-input"><%= @work_order.status.name %></span></div>
+       <label class="control-label"><%= t "workorder.details" %>:</label>
+         <div class="html_area controls"><span class="uneditable-input"><%= markdown(@work_order.description) %></span></div>
+  </div>
+
+
+
+     <%= render :partial => 'tasks_table' %>
+
      <% if not @work_order.closed %>
+        <div class="centered_text">
+
+              <p>
+                <input type="submit" value="Add Task" id="button_task"  />
+              </p>
+
+            </div>
+        <div id="effect_task" style="display:none;">
+          <%= render :partial => 'tasks/form' %>
+          </div>
+
     <div class="centered_text">
       <p>
         <input type="submit" value="Add a Message" id="button"  />
@@ -60,8 +63,10 @@
   </div>
   <% end %>
   <%= will_paginate replies %>
+    <h3>Messages</h3>
   <% replies.each do |reply|  %>
-    <div id="reply_container">
+
+    <div id="reply_container" class="span12">
       <div id="reply" class="<%= cycle :odd, :even %>" >
       <div>
         <div class="reply_author">
@@ -98,4 +103,24 @@
 <% end %>
   </fieldset>
 </div>
+<div class="span2">
+  <ul class="nav nav-list">
+      <li class="nav-header">Actions</li>
+        <% if @work_order.closed.blank? and can? :edit, WorkOrder %>
+        <li><%= menu_action edit_work_order_path, t("global.edit"), "icon-pencil" %> </li>
+        <% end %>
+       <% if can? :destroy, WorkOrder %>
+          <li><%=  menu_action work_order_path(@work_order.id,:format => 'pdf'), t("global.print"), "icon-print" %>
+            <% if @work_order.closed? %>
+                <% if @invoiced %>
+                    <li><%= menu_action invoice_path(@invoiced.id), (t "invoice.show"), "icon-list-alt" %></li>
+                <% else %>
+                   <li><%= menu_action new_work_order_invoice_path(:work_order_id => @work_order.id), (t "invoice.create"), "icon-list-alt" %></li>
+                <% end %>
+            <% else %>
+        <% end %>
+       <% end %>
+
+      <li><%= menu_action work_orders_path, (t "global.exit"), "icon-arrow-left" %></li>
+    </ul>
 </div>
