More updates to styling and adding more menu options now. Still more todo.

--- a/app/views/layouts/_navbar.erb
+++ b/app/views/layouts/_navbar.erb
@@ -3,11 +3,51 @@
     <div class="container">
       <ul class="nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%=  link_to "Work Orders",  work_orders_path %></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <% if can? :create, WorkOrder %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= t("workorder.t_workorders") %>
+                        <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to "List All", work_orders_path %></li>
+                        <% if can? :manage, WorkOrder %>
+                            <li><%= link_to "Create New", new_work_order_path %></li>
+                        <% else %>
+                            <% if can? :create, WorkOrder  %>
+                                <li><%= link_to "Create New", new_user_work_order_path(:user_id => current_user.id) %></li>
+                            <% end %>
+                        <% end %>
+                      </ul>
+                    </li>
+        </li>
+        <% end %>
+        <% if can? :create, Invoice %>
+            <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <%= t("global.invoices") %>
+                          <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><%= link_to "List All", invoices_path %></li>
+                        </ul>
+                      </li>
+        <% end %>
+        <% if can? :update, Setting %>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("settings.t_title") %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Business Settings", settings_path %></li>
+              <li><%= link_to "Service Rates", service_rates_path %></li>
+              <li><%= link_to "Priority List", priority_lists_path %></li>
+              <li><%= link_to "Permissions", permissions_path %></li>
+              <li><%= link_to "Roles", roles_path %></li>
+            </ul>
+          </li>
+         <% end %>
       </ul>
 
       <!--if logged_in?
