--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -103,7 +103,7 @@
 <% end %>
   </fieldset>
 </div>
-<div class="span2">
+<div class="span2 well">
   <ul class="nav nav-list">
       <li class="nav-header">Actions</li>
         <% if @work_order.closed.blank? and can? :edit, WorkOrder %>
