--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -14,10 +14,10 @@
         <td style="text-align: left!important;"><a href="<%= work_order_path(new_wo.id) %>" rel="tooltip" data-placement="right" data-original-title="
                 <%= t "global.created_at" %>:<%= l new_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= new_wo.created_by %>
                 <%= t "global.updated_at" %>:<%= l new_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= new_wo.edited_by %>"><%= new_wo.id %></a></td>
-            <td align="center"><%= new_wo.priority_list.name %></td>
+            <td><%= priority_badge new_wo.priority_list.id,  new_wo.priority_list.name %></td>
             <td align="center"><%= link_to(new_wo.user.name, user_path(new_wo.user.id) )%></td>
             <td><%= truncate(new_wo.subject, :length => 100 ) %></td>
-            <td align="right">
+            <td>
               <% if can? :manage, WorkOrder %>
               <a class="btn btn-small" href="<%= work_order_url(new_wo.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
               <a class="btn btn-small" href="<%= edit_work_order_url(new_wo.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
