More upgrading to bootstrap.

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,13 +1,11 @@
-<%= simple_form_for([@work_order,@task]) do |f| %>
-    <h3 class="centered_text">Adding new task</h3>
-  <%= f.error_notification %>
-
+<%= simple_form_for [@work_order,@task], :html => {:class => "form-horizontal"} do |f| %>
     <%= f.input :work_order_id, :as => :hidden %>
     <%= f.input :title %>
-    <%= f.input :description, :input_html => { :cols => 60, :rows => 12 } %>
+    <%= f.input :description, :input_html => { :rows => 5 } %>
     <%= f.input :completed %>
 
-  <div class="center">
-    <%= f.button :submit %>
-  </div>
+<div class="form-actions">
+  <%= f.submit nil, :class => "btn btn-primary" %>
+  <%= link_to t("global.cancel"), work_order_path, :class => "btn" %>
+</div>
 <% end %>
