--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -3,124 +3,162 @@
     <div class="control-group">
       <label class="control-label"><%= t "workorder.subject" %>:</label>
       <div class="controls">
-        <span class="input-xlarge uneditable-input"><%= @work_order.subject  %></span>
+        <span class="span6 uneditable-input"><%= @work_order.subject %></span>
       </div>
     </div>
     <% if @work_order.closed? %>
-           <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
         <div class="controls">
           <span class="input-xlarge uneditable-input"><%= @work_order.assigned_to_username %></span>
         </div>
     <% else %>
-
-     <% if current_user.workorder_assignability %>
-        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
-        <div class="controls">
-          <%= render :partial => "assign" %>
-        </div>
-     <% else %>
-      <% if @work_order.assigned_to_username.blank? %>
-        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
-                <div class="controls"><span class="input-xlarge uneditable-input"><%= t("workorder.not_assigned_message") %></span></div>
-      <% else %>
-        <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
-                <div class="controls"><span class="input-xlarge uneditable-input"><%= @work_order.assigned_to_username %></span> </div>
-      <% end %>
-     <% end %>
-     <% end %>
-       <label class="control-label"><%= t "workorder.priority" %>:</label>
-            <div class="controls "><span class="label"><%= @work_order.priority_list.name %></span></div>
-       <label class="control-label"><%= t "workorder.status" %>:</label>
-            <div class="controls"><span class="input-xlarge uneditable-input"><%= @work_order.status.name %></span></div>
-       <label class="control-label"><%= t "workorder.details" %>:</label>
-         <div class="html_area controls"><span class="uneditable-input"><%= markdown(@work_order.description) %></span></div>
-  </div>
-
-
-
-     <%= render :partial => 'tasks_table' %>
-
-     <% if not @work_order.closed %>
-        <div class="centered_text">
-
-              <p>
-                <input type="submit" value="Add Task" id="button_task"  />
-              </p>
-
+        <% if current_user.workorder_assignability? %>
+            <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+            <div class="controls">
+              <%= render :partial => "assign" %>
             </div>
-        <div id="effect_task" style="display:none;">
-          <%= render :partial => 'tasks/form' %>
-          </div>
-
-    <div class="centered_text">
-      <p>
-        <input type="submit" value="Add a Message" id="button"  />
-      </p>
-
-    </div>
-  <div id="effect" style="display:none;">
-     <%= render :partial => 'replies/form' %>
-  </div>
-  <% end %>
-  <%= will_paginate replies %>
-    <h3>Messages</h3>
-  <% replies.each do |reply|  %>
-
-    <div id="reply_container" class="span12">
-      <div id="reply" class="<%= cycle :odd, :even %>" >
-      <div>
-        <div class="reply_author">
-           <%= image_tag "blank_avatar.png", :size => "32x32"  %><br/>
-          <%= reply.user.name %>
-        </div>
-        <div class="reply_message">
-           <strong> Message:</strong> <%= markdown(reply.content) %>
-
-        <span style="font-size:10px">
-          <% if reply.updated_at > reply.created_at %><%= image_tag('comment_edit.png') %>( Edited <%= localize reply.updated_at, :format => :medium %> )<% end %>
-          <%= time_ago_in_words(reply.created_at) %> ago (<%= localize reply.created_at, :format => :medium %>)
-        </span>
-        <% if @work_order.closed.blank? && if can? :edit, Reply %>
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_reply_url(@work_order.id,reply.id) )%>&nbsp;
-        <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_reply_path(reply.id), :confirm => (t 'alert.destroy'), :method => :delete ) if can? :manage, Reply %>
-        <% end %>
-        <% end %>
-        </div>
-    </div>
-  </div>
-    </div>
- <% end %>
-    <%= will_paginate replies %>
-  <div class="clear"></div>
-  <fieldset style="text-align:center;">
-    <legend><%= t "global.activity_log" %></legend>
-
-        <strong><%= t "global.created_at" %>:</strong><%= time_ago_in_words(@work_order.created_at) %> <%= t "global.ago" %> (<%= localize @work_order.created_at, :format => :short  %>) <%= t "global.by" %> <%= @work_order.created_by %>.
-
-    <% if @work_order.updated_at == nil %>
         <% else %>
-        | <strong><%= t "global.updated_at" %>:</strong><%= time_ago_in_words(@work_order.updated_at) %> <%= t "global.ago" %> (<%= localize @work_order.updated_at, :format => :short  %>) <%= t "global.by" %> <%= @work_order.edited_by %>.
-<% end %>
-  </fieldset>
-</div>
-<div class="span2 well">
-  <ul class="nav nav-list">
-      <li class="nav-header">Actions</li>
-        <% if @work_order.closed.blank? and can? :edit, WorkOrder %>
-        <li><%= menu_action edit_work_order_path, t("global.edit"), "icon-pencil" %> </li>
-        <% end %>
-       <% if can? :destroy, WorkOrder %>
-          <li><%=  menu_action work_order_path(@work_order.id,:format => 'pdf'), t("global.print"), "icon-print" %>
-            <% if @work_order.closed? %>
-                <% if @invoiced %>
-                    <li><%= menu_action invoice_path(@invoiced.id), (t "invoice.show"), "icon-list-alt" %></li>
-                <% else %>
-                   <li><%= menu_action new_work_order_invoice_path(:work_order_id => @work_order.id), (t "invoice.create"), "icon-list-alt" %></li>
-                <% end %>
+            <% if @work_order.assigned_to_username.blank? %>
+                <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+                <div class="controls">
+                  <span class="input-xlarge uneditable-input"><%= t("workorder.not_assigned_message") %></span></div>
             <% else %>
+                <label class="control-label"><%= t "workorder.assigned_to" %>:</label>
+                <div class="controls">
+                  <span class="input-xlarge uneditable-input"><%= @work_order.assigned_to_username %></span></div>
+            <% end %>
         <% end %>
-       <% end %>
+    <% end %>
+    <div class="control-group">
+      <label class="control-label"><%= t "workorder.priority" %>/<%= t "workorder.status" %>:</label>
+      <div class="controls">
+        <%= priority_badge @work_order.priority_list.id, @work_order.priority_list.name %>
+        <span class="span2"> <%= @work_order.status.name %></span>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label"><%= t "workorder.details" %>:</label>
+      <div class="controls">
+        <span class="uneditable-textarea"><%= markdown(@work_order.description) %></span>
+      </div>
+    </div>
+      <!-- BOF Add new message button and partial-->
+      <% if @work_order.closed == false %>
+          <div class="span10">
+            <div class="span12 offset2">
+            <a href="#addTasks" role="button" class="btn" data-toggle="modal">New Task</a>
+            <!-- Modal -->
+            <div id="addTasks" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">Adding a Task</h3>
+              </div>
+              <div class="modal-body">
+                <%= render :partial => 'tasks/form' %>
+              </div>
+            </div>
+            </div>
+          <h3>Tasks</h3>
+            <input type="submit" value="Add Task" id="button_task"/>
+          <div id="effect_task" style="display:none;">
+            <%= render :partial => 'tasks/form' %>
+          </div>
+          </div>
+      <% end %>
+      <!-- EOF Add new message button and partial-->
+      <div class="span10">
 
-      <li><%= menu_action work_orders_path, (t "global.exit"), "icon-arrow-left" %></li>
-    </ul>
-</div>
+              <div class="span12 offset2">
+                <div class="pull-left"> <a href="#messages" role="button" class="btn" data-toggle="modal">New Message</a></div>
+                <div class="pull-right pagination-small"><%= will_paginate replies %></div>
+
+                <!-- Modal -->
+                <div id="messages" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h3 id="myModalLabel">Message</h3>
+                    </div>
+                  <div class="modal-body">
+                    <%= render :partial => 'replies/form' %>
+                  </div>
+                  </div>
+                <table class="table table-bordered table-striped">
+                  <thead>
+                    <tr><!--mytodo add translations-->
+                      <th>Messages</th>
+                    </tr>
+                    <tr>
+                      <th>Author</th>
+                      <th>Message</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <% replies.each do |reply| %>
+                  <tr>
+                    <td>
+                      <p><%= image_tag "blank_avatar.png", :size => "32x32" %></p>
+                      <small><%= reply.user.name %></small>
+                    </td>
+                    <td>
+                      <%= markdown(reply.content) %>
+                      <span style="font-size:10px">
+                        <% if reply.updated_at > reply.created_at %><%= image_tag('comment_edit.png') %>
+                            ( Edited <%= localize reply.updated_at, :format => :medium %> )<% end %>
+                        <%= time_ago_in_words(reply.created_at) %> ago (<%= localize reply.created_at, :format => :medium %>
+                        )
+                       </span>
+                      <% if @work_order.closed.blank? && if can? :edit, Reply %>
+                          <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_reply_url(@work_order.id, reply.id)) if can? :edit, Reply %>
+                          <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_reply_url(@work_order.id, reply.id), :confirm => (t 'alert.destroy'), :method => :delete) if can? :manage, Reply %>
+                       <% end %>
+                            </div>
+                          </div>
+                      <% end %>
+                    </td>
+                  </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+      </div>
+      <div class="span10 small">
+        <fieldset style="text-align:center;">
+          <legend><%= t "global.activity_log" %></legend>
+          <small>
+            <strong><%= t "global.created_at" %>
+              :</strong><%= time_ago_in_words(@work_order.created_at) %> <%= t "global.ago" %>
+            (<%= localize @work_order.created_at, :format => :short %>) <%= t "global.by" %> <%= @work_order.created_by %>.
+
+            <% if @work_order.updated_at == nil %>
+            <% else %>
+                | <strong><%= t "global.updated_at" %>
+            :</strong><%= time_ago_in_words(@work_order.updated_at) %> <%= t "global.ago" %>
+                (<%= localize @work_order.updated_at, :format => :short %>
+                ) <%= t "global.by" %> <%= @work_order.edited_by %>.
+            <% end %>
+          </small>
+        </fieldset>
+      </div>
+      </div>
+
+      <div class="span2 well">
+        <ul class="nav nav-list">
+          <li class="nav-header">Actions</li>
+          <% if @work_order.closed.blank? and can? :edit, WorkOrder %>
+              <li><%= menu_action edit_work_order_path, t("global.edit"), "icon-pencil" %> </li>
+          <% end %>
+          <% if can? :destroy, WorkOrder %>
+              <li><%= menu_action work_order_path(@work_order.id, :format => 'pdf'), t("global.print"), "icon-print" %>
+                <% if @work_order.closed? %>
+                    <% if @invoiced %>
+                      <li><%= menu_action invoice_path(@invoiced.id), (t "invoice.show"), "icon-list-alt" %></li>
+                  <% else %>
+                      <li><%= menu_action new_work_order_invoice_path(:work_order_id => @work_order.id), (t "invoice.create"), "icon-list-alt" %></li>
+                  <% end %>
+              <% else %>
+              <% end %>
+          <% end %>
+          <li><%= menu_action work_orders_path, (t "global.exit"), "icon-arrow-left" %></li>
+        </ul>
+      </div>
