--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,6 @@
 // Set the correct sprite paths
 $iconSpritePath: image-path('glyphicons-halflings.png');
+//$iconSpritePath: image-path('/assets/glyphicons2.png');
 $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 
 $navbarBackground: #555;
@@ -10,27 +11,27 @@ $navbarLinkColor: #eee;
 @import "bootstrap";
 
 body { padding-top: 20px; }
+/* Modal Header styling */
+.modal-header {background-color: #2e8b57;}
+
+/* Form Hint styling */
+.help-block {color:#b5b2b2;font-size:small;}
+
+
 /*Footer Styling*/
 #footer {text-align: center; padding: 4px 0;color:#b5b2b2;font-size:x-small;}
 #footer a {color:#b5b2b2;font-size:x-small;}
 
-.form-signin {
-        max-width: 300px;
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
+.form-signin {max-width: 300px; padding: 19px 29px 29px; margin: 0 auto 20px; background-color: #fff;border: 1px solid #e5e5e5;
         -webkit-border-radius: 5px;
-           -moz-border-radius: 5px;
-                border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
         -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+        box-shadow: 0 1px 2px rgba(0,0,0,.05);
       }
       .form-signin .form-signin-heading,
-      .form-signin .checkbox {
-        margin-bottom: 10px;
-      }
+      .form-signin .checkbox { margin-bottom: 10px; }
       .form-signin input[type="text"],
       .form-signin input[type="password"] {
         font-size: 16px;
